# cig-mcp-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: quickstart.md
go/: go.mod  main.go
go/cigmcp/: version.go  version_test.go
go/cmd/cig-mcp-edgar/: main.go
go/servers/edgar/: client.go  client_test.go  server.go
python/: main.py  pyproject.toml
python/src/cig_mcp/: __init__.py
python/src/cig_mcp/servers/: __init__.py
python/src/cig_mcp/servers/yahoo/: __init__.py  __main__.py  server.py
python/tests/: test_smoke.py
python/tests/servers/yahoo/: test_server.py
