[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cig-mcp"
description = "Model Context Protocol servers and building blocks for quantitative finance."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "CIG Engineering" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "anthropic",
    "claude",
    "llm-tools",
    "quantitative-finance",
    "fintech",
    "quant",
    "investment-tools",
    "portfolio-analytics",
    "risk-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
dependencies = [
    "mcp>=1.26",
]

[project.urls]
Homepage = "https://github.com/ChizyIG/cig-mcp-toolkit"
Repository = "https://github.com/ChizyIG/cig-mcp-toolkit"
Issues = "https://github.com/ChizyIG/cig-mcp-toolkit/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.version]
path = "src/cig_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cig_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-ra --strict-markers"
